--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^8.19.2",
+    "mongoose": "^9.1.3",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "swagger-jsdoc": "^6.2.8",
